--- a/styles.css
+++ b/styles.css
@@ -106,8 +106,7 @@ body {
 .footer {
   text-align: center;
   padding: 1rem;
-  background-color: #ffb6c1;
-  padding: 1rem;
+  background-color: rgb(221, 40, 176) padding 1rem;
 }
 
 .seguinos {
